<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_name_label"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/groupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/group_name_placeholder"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_description_label"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editGroupDescEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/group_description_placeholder"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_currency_label"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/group_participants_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/ParticipantInput"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:ems="10"
                android:hint="@string/group_participants_placeholder"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ListView
                android:id="@+id/participantsListView"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/addParticipantButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_participant_button_text"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editGroupIDLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/groupIdLabel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editGroupIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <Button
                android:id="@+id/editGroupCopyIdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_id_button" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/editGroupSaveChangesButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save_changes_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/editGroupDeleteButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_group_button"
            android:textColor="@color/white"
            android:theme="@style/Style.Nanuda.DeleteButton" />
    </LinearLayout>


</LinearLayout>