<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/light_grey"
    android:visibility="visible"
    tools:context=".group.MakeGroupActivity">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="206dp"
        android:layout_height="35dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/group_name_placeholder"
        android:inputType="textPersonName"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_label"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/groupName"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/group_description_label"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/groupDescription"
        android:layout_width="208dp"
        android:layout_height="235dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/group_description_placeholder"
        android:inputType="textPersonName"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/groupName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/groupName"
        app:layout_constraintTop_toBottomOf="@+id/groupName" />

    <TextView
        android:id="@+id/addExpenseCurrencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:text="@string/group_currency_label"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/addExpensePayerSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toEndOf="@+id/addExpenseCurrencyLabel"
        app:layout_constraintTop_toBottomOf="@+id/groupDescription"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_participants_label"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addExpenseCurrencyLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addExpenseCurrencyLabel"
        app:layout_constraintTop_toBottomOf="@+id/addExpenseCurrencyLabel"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/ParticipantInput"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/group_participants_placeholder"
        android:inputType="textPersonName"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDescription"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/addParticipantButton"
        android:layout_width="48dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_participant_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addExpensePayerSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ParticipantInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <ListView
        android:id="@+id/participantsListView"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ParticipantInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/makeANewGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_group_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.993" />


</androidx.constraintlayout.widget.ConstraintLayout>