<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/design_default_color_secondary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/name_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newExpenseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="Input Expense Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount_text"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:text="@string/amount_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addExpenseAmountEditText"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/amount_label" />

            <TextView
                android:id="@+id/addExpenseCurrencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="USD"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:text="@string/date_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:hint="10/10/2020"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/whopaid_text"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:text="@string/payer_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/addExpensePayerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:spinnerMode="dropdown" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:isScrollContainer="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paidfor_text"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:text="@string/payee_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/payeeListScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/payeeListLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:background="@color/white">


            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/green"
                android:gravity="center"
                android:onClick="createNewExpense"
                android:shadowColor="@color/green"
                android:text="@string/create_expense_button_text"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>